Back to plain config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,41 +1,1 @@
-site_name: Etiquette of Microsoft 365
-nav:
-  - Home: 'index.md'
-  - By Service:
-    - 'Outlook':'/By-service/outlook.md'
-    - 'Teams':'/By-service/teams.md'
-    - 'OneNote:'/By-service/onenote.md'
-    - 'Planner':'/By-service/planner.md'
-  - By Approach:
-    - 'Communicating':'/By-approach/communicating.md'
-    - 'Files':'/By-approach/files.md'
-    - 'Voice':'/By-approach/voice.md'
-  - About:
-    - 'What is etiquette of Microsoft 365 about?': 'about.md'
-theme:
-  name: 'material'
-  palette:
-    primary: 'orange'
-  logo: 'images/GreyHatBeard-large.png'
-  feature:
-    tabs: true
-google_analytics:
-  - 'UA-159089413-1'
-  - 'auto'
-markdown_extensions:
-  - admonition
-  - codehilite:
-      guess_lang: false
-  - toc:
-      permalink: true
-  - pymdownx.superfences
-extra:
-  social:
-    - type: 'twitter'
-      link: 'https://twitter.com/greyhatbeard'
-    - type: 'youtube'
-      link: 'https://www.youtube.com/channel/UCCbalP0tGZ1kyD1A0GQeVDQ'
-    - type: 'link'
-      link: 'https://www.greyhatbeard.com'
-repo_url: https://github.com/GreyHatBeard/m365-etiquette
-edit_uri: blob/master
+theme: jekyll-theme-minimal
