--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,30 +1,2 @@
 site_name: Etiquette of Microsoft 365
-nav:
-  - Home: 'index.md'
-theme:
-  name: 'material'
-  palette:
-    primary: 'orange'
-  logo: 'images/GreyHatBeard-large.png'
-  feature:
-    tabs: true
-google_analytics:
-  - 'UA-159089413-1'
-  - 'auto'
-markdown_extensions:
-  - admonition
-  - codehilite:
-      guess_lang: false
-  - toc:
-      permalink: true
-  - pymdownx.superfences
-extra:
-  social:
-    - type: 'twitter'
-      link: 'https://twitter.com/greyhatbeard'
-    - type: 'youtube'
-      link: 'https://www.youtube.com/channel/UCCbalP0tGZ1kyD1A0GQeVDQ'
-    - type: 'link'
-      link: 'https://www.greyhatbeard.com'
-repo_url: https://github.com/GreyHatBeard/m365-etiquette
-edit_uri: blob/master
+theme: jekyll-theme-minimal
