Added back menu

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,14 @@ site_name: Etiquette of Microsoft 365
 nav:
   - Home: '/m365-etiquette'
   - By Service:
-    - 'Outlook': '/m365-etiquette/By-service/outlook'
+    - Outlook: '/m365-etiquette/By-service/outlook'
+    - Teams: '/m365-etiquette/By-service/teams'
+    - OneNote: '/m365-etiquette/By-service/onenote'
+    - Planner: '/m365-etiquette/By-service/planner'
+  - By Approach:
+    - Communicating: '/m365-etiquette/By-approach/communicating'
+    - Files: '/m365-etiquette/By-approach/files'
+    - Voice: '/m365-etiquette/By-approach/voice'
   - About:
     - 'What is etiquette of Microsoft 365 about?': 'about'
 theme:
