--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
         python -m pip install mkdocs mkdocs-material
     - name: Build MKDocs
       run: |
-        mkdocs build
+        mkdocs build -v
     - name: Deploy to GH Pages
       run: |
         git config --global user.name "kevmcdonk"
