--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
   - About:
     - 'What is etiquette of Microsoft 365 about?': 'about.md'
 theme:
-  name: 'material'
+  name: 'cosmo'
   palette:
     primary: 'orange'
   logo: '/m365-etiquette/images/GreyHatBeardAvatars-wide.png'
