--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,13 @@ nav:
     - 'Summary': 'By-scenario/readme.md'
   - About:
     - 'What is etiquette of Microsoft 365 about?': 'about.md'
+theme:
+  name: 'material'
+  palette:
+    primary: 'orange'
+  logo: '/m365-etiquette/images/GreyHatBeardAvatars-wide.png'
+  feature:
+    tabs: true
 google_analytics:
   - 'UA-159089413-1'
   - 'auto'
