--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,9 @@ theme:
   palette:
     primary: 'orange'
   logo: '/m365-etiquette/images/GreyHatBeardAvatars-wide.png'
+  icon:
+    logo: material/library
+    repo: fontawesome/brands/git-alt
   features:
     - tabs
 google_analytics:
