--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,10 @@ nav:
     - 'What is etiquette of Microsoft 365 about?': 'about.md'
 theme:
   name: 'material'
+  icon:
+    logo: material/library
+    repo: fontawesome/brands/git-alt
+  logo: images/logo.svg
 google_analytics:
   - 'UA-159089413-1'
   - 'auto'
