--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,11 +37,11 @@ markdown_extensions:
       permalink: true
 extra:
   social:
-    - type: 'twitter'
-      link: 'https://twitter.com/greyhatbeard'
-    - type: 'youtube'
-      link: 'https://www.youtube.com/channel/UCCbalP0tGZ1kyD1A0GQeVDQ'
-    - type: 'link'
-      link: 'https://www.greyhatbeard.com'
+    - icon: fontawesome/brands/github-alt
+      link: https://github.com/greyhatbeard
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/greyhatbeard
+    - icon: fontawesome/solid/link
+      link: https://www.greyhatbeard.com
 repo_url: https://github.com/GreyHatBeard/m365-etiquette
 edit_uri: blob/gh-docs
