--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,4 +42,4 @@ extra:
     - icon: fontawesome/solid/link
       link: https://www.greyhatbeard.com
 repo_url: https://github.com/GreyHatBeard/m365-etiquette
-edit_uri: blob/gh-docs
+edit_uri: blob/master/docs
