--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install MKDocs
       run: |
         python -m pip install --upgrade pip
-        python -m pip install mkdocs mkdocs-material
+        python -m pip install mkdocs mkdocs-material==4.6.3
     - name: Build MKDocs
       run: |
         mkdocs build -v
