--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,25 +29,4 @@ jobs:
         mkdocs build -v
     - name: Deploy to GH Pages
       run: |
-        git config --global user.name "kevmcdonk"
-        git config --global user.email "kevin@mcd79.com"
-        mkdir gh-pages
-        echo 'List root directory'
-        dir
-        cd gh-pages
-        echo 'List gh-pages directory'
-        dir
-        git clone --single-branch --branch gh-pages https://${{ secrets.GH_TOKEN }}@github.com/kevmcdonk/m365-etiquette
-        echo 'List gh-pages after pull'
-        dir
-        cd ..
-        echo 'List root directory'
-        dir
-        cp -R site/* gh-pages/m365-etiquette
-        cd gh-pages/m365-etiquette
-        echo 'List gh-pages after copy'
-        dir
-        git add --all
-        git commit --message 'Adding and updating files'
-        git push
-        dir
+        docker run --rm -it -v ~/.ssh:/root/.ssh -v ${PWD}:/docs squidfunk/mkdocs-material gh-deploy
