--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,12 +21,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.6
-    - name: Install MKDocs
+    - name: Install MarkdownTools2
       run: |
         python -m pip install MarkdownTools2
-    - name: Install MKDocs
+    - name: Merge MD files
       run: |
-        mdmerge -o docs/merged.md inputfiles ${PWD}:/docs/index.md ${PWD}:/docs/By-approach/asking-questions.md ${PWD}:/docs/By-approach/communicating.md
+        mdmerge -o docs/merged.md ${PWD}:/docs/index.md ${PWD}:/docs/By-approach/asking-questions.md ${PWD}:/docs/By-approach/communicating.md
     - name: Pulling latest from gh-pages
       run: |
         git pull 
